[package]
name = "sommelier-auction-cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace = true
lazy_static.workspace = true
serde.workspace = true
sommelier-auction.workspace = true
sommelier-auction-proto.workspace = true
tokio.workspace = true
